--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "daisyui": "^2.51.6",
     "firebase": "^9.22.0",
+    "lightgallery": "^2.7.1",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
+    "next-gallery": "^1.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.8.0",
