--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "aos": "^2.3.4",
     "daisyui": "^2.51.6",
     "firebase": "^9.22.0",
+    "leaflet": "^1.9.4",
     "lightgallery": "^2.7.1",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
@@ -23,11 +24,13 @@
     "react-helmet-async": "^1.3.0",
     "react-icons": "^4.8.0",
     "react-loader-spinner": "^5.3.4",
+    "react-parallax-tilt": "^1.7.141",
     "react-router-dom": "^6.11.2",
     "react-tabs": "^6.0.1",
     "react-toastify": "^9.1.3",
     "sort-by": "^1.2.0",
-    "sweetalert2": "^11.7.5"
+    "sweetalert2": "^11.7.5",
+    "swiper": "^9.3.2"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
